syntax = "proto3";

package keyper.api.v1;

option go_package = "github.com/koy/keyper/pkg/api/proto;proto";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "models.proto";

// SecretsService handles CRUD operations for secrets
service SecretsService {
  // CreateSecret creates a new secret
  rpc CreateSecret(CreateSecretRequest) returns (CreateSecretResponse) {
    option (google.api.http) = {
      post: "/v1/secrets"
      body: "*"
    };
  }

  // GetSecret retrieves a specific secret by ID
  rpc GetSecret(GetSecretRequest) returns (GetSecretResponse) {
    option (google.api.http) = {
      get: "/v1/secrets/{secret_id}"
    };
  }

  // UpdateSecret updates an existing secret
  rpc UpdateSecret(UpdateSecretRequest) returns (UpdateSecretResponse) {
    option (google.api.http) = {
      put: "/v1/secrets/{secret_id}"
      body: "*"
    };
  }

  // DeleteSecret soft-deletes a secret
  rpc DeleteSecret(DeleteSecretRequest) returns (DeleteSecretResponse) {
    option (google.api.http) = {
      delete: "/v1/secrets/{secret_id}"
    };
  }

  // ListSecrets retrieves all secrets for the authenticated user
  rpc ListSecrets(ListSecretsRequest) returns (ListSecretsResponse) {
    option (google.api.http) = {
      get: "/v1/secrets"
    };
  }

  // SearchSecrets searches secrets by title, tags, or category
  rpc SearchSecrets(SearchSecretsRequest) returns (SearchSecretsResponse) {
    option (google.api.http) = {
      get: "/v1/secrets/search"
    };
  }
}

// CreateSecretRequest contains data for creating a new secret
message CreateSecretRequest {
  SecretType type = 1;
  string title = 2;
  string encrypted_data = 3;  // Client-encrypted payload
  Metadata metadata = 4;
}

// CreateSecretResponse contains the created secret
message CreateSecretResponse {
  Secret secret = 1;
  string message = 2;
}

// GetSecretRequest contains the secret ID to retrieve
message GetSecretRequest {
  string secret_id = 1;
}

// GetSecretResponse contains the requested secret
message GetSecretResponse {
  Secret secret = 1;
}

// UpdateSecretRequest contains updated secret data
message UpdateSecretRequest {
  string secret_id = 1;
  string title = 2;
  string encrypted_data = 3;  // Client-encrypted payload
  Metadata metadata = 4;
  int64 version = 5;  // For optimistic locking
}

// UpdateSecretResponse contains the updated secret
message UpdateSecretResponse {
  Secret secret = 1;
  string message = 2;
}

// DeleteSecretRequest contains the secret ID to delete
message DeleteSecretRequest {
  string secret_id = 1;
}

// DeleteSecretResponse confirms deletion
message DeleteSecretResponse {
  string message = 1;
}

// ListSecretsRequest contains optional filtering parameters
message ListSecretsRequest {
  SecretType type = 1;  // Filter by type (optional)
  string category = 2;  // Filter by category (optional)
  bool include_deleted = 3;  // Include soft-deleted secrets
  int32 page_size = 4;  // Pagination
  string page_token = 5;  // Pagination token
}

// ListSecretsResponse contains the list of secrets
message ListSecretsResponse {
  repeated Secret secrets = 1;
  string next_page_token = 2;
  int32 total_count = 3;
}

// SearchSecretsRequest contains search criteria
message SearchSecretsRequest {
  string query = 1;  // Search term (searches title, tags, notes)
  SecretType type = 2;  // Filter by type (optional)
  string category = 3;  // Filter by category (optional)
  repeated string tags = 4;  // Filter by tags (optional)
  bool favorites_only = 5;  // Only return favorites
}

// SearchSecretsResponse contains matching secrets
message SearchSecretsResponse {
  repeated Secret secrets = 1;
  int32 total_count = 2;
}
